_sass/_layout.scss
/**
 * Site header
 */
.banner {
  position: relative;
  overflow: hidden;
  .header {
    border-top: 38px solid black;
    background-image: linear-gradient(to bottom, #000000, rgba(0, 0, 0, 0.0));
    z-index: 2;
    position: relative;
    .wrapper {
      height: 182px;
    }
    .upper {
      position: relative;
      .logo {
        width: 158px;
        height: 16.2px;
        background-image: url('../img/logo.svg');
        display: inline-block;
        position: absolute;
        top: -3px;
        left: 0;
        background-repeat: no-repeat;
      }
      .sign-up {
        top: -10px;
        position: absolute;
        right: 0;
        width: 106px;
        height: 42px;
        border-radius: 8px;
        border: solid 2px rgba(255, 255, 255, 0.5);
        font-size: 18px;
        color: #ffffff;
        outline: none!important;
        background: none!important;
        cursor: pointer!important;
        &:active {
          box-shadow: inset 0 0 10px rgba(0,0,0,1);
        }
      }
    }
    .lower {
      position: absolute;
      bottom: 0;
      width: 100%;
      left: 0;
      padding: 0 20px;
      box-sizing: border-box;
      h1 {
        font-size: 30px;
        text-align: center;
        color: #ffffff;
        text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
        font-weight: 500;

      }
    }
  }
  .video {
    padding: 26px 10px 0;
    z-index: 2;
    position: relative;
    text-align: center;
    padding-bottom: 243px;
    height: 500px;
    margin: auto;
    font-size: 0;
    top: 190px;
    .phone {
      position: relative;;
      display: inline-block;
      background-repeat: no-repeat;
      background-position: center right;
      background-size: contain!important;
      transition: transform 0.4s ease;
      .card-container {
        position: absolute;
        left: 0;
        right: 0;
        padding: 10px;
        box-sizing: border-box;
        position: relative;
        display: inline-block;
        overflow: hidden;
        transition: background 0.2s ease 0.5s;
        background-color:rgba(0, 0, 0, 0);
        .card {
          height: 100%;
          width: 100%;
          background-position: center center;
          background-repeat: no-repeat;
          background-size: contain;
          transition: margin 0.2s ease 0.5s;
        }
      }
      &.animateIn {
        .card-container {
          background-color:rgba(0, 0, 0, 1);
          .card {
            margin: 0!important;
          }
        }
      }
      &.iphone {
        left: 0;
        height: 321px;
        width: 651px;
        @include background-image-retina("../img/demo/iPhone", png, 0, 0);
        transform: rotate(-90deg) translateY(100px);
        &.animateIn {
          transform: rotate(0) translateY(0);
        }
        .card-container {
          width: 477px;
          height: 268px;
          top: 25px;
          border-radius: 2px;
          left: 0px;
          .card {
            margin: 0 0 0 100%;
            background-image: url('../img/demo/nexus-card.svg');
          }
        }
      }
      &.nexus {
        width: 647px;
        height: 323px;
        border-radius: 2px;
        @include background-image-retina("../img/demo/Nexus", png, 0, 0);
        transform: rotate(90deg) translateY(100px);
        &.animateIn {
          transform: rotate(0) translateY(0);
        }
        .card-container {
          width: 475px;
          height: 268px;
          top: 28px;
          border-radius: 2px;
          left: -10px;
          .card {
            margin: 0 0 0 -100%;
            background-image: url('../img/demo/iphone-card.svg');
          }
        }
      }
    }
  }
  .apps-overlay {
    position: absolute;
    background: rgba(0,0,0,0.5);
    z-index: 1;
    height: 100%;
    width: 100%;
    top: 0;
    .bottom-shadow {
      position: absolute;
      bottom: 0;
      width: 100%;
      height: 146px;
      background: linear-gradient(to top, #000000, rgba(0, 0, 0, 0.0));
    }
  }
  .apps {
    line-height: 0;
    font-size: 0;
    background: black;
    z-index: 0;
    position: absolute;
    top: 0;
    text-align: center;
    img {
      width: 258px;
      height: 146.86px;
      padding: 5px;
      @include media-query(535px) {
        width: 258px * 0.5;
        height: 146.86px * 0.5;
      }
    }
  }
}
/* ... */

